--- a/exploring/exploring_scrape.ipynb
+++ b/exploring/exploring_scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "id": "808651af-7846-43a2-a28e-91ea26b5d3c4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "id": "1b0419aa-1e06-44da-a7b1-bebc0cf4bf5c",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "cbfb2f67-d061-4dad-870d-98e885511a9b",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "['GameHub Scraped', 'Game thread scraped', 'Post game thread Scraped']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "a8ca645f-e0a3-4612-8b06-b7cf390e44d9",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "2d455633-80ba-450b-9199-cc7060b195a2",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "5e042b0b-054b-4ecb-aa20-640baa453935",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "3b67c13f-6031-4634-973e-2396830de9e7",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        "[1567 rows x 30 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
+   "id": "defb7d7d-81bb-46c6-aec7-30da0f5bd999",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "889.573896353167"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(reddit_df['Game thread Comments'] + reddit_df['Post game thread Comments']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "2ef0d40d-9353-4468-8790-dc91d51f0f78",
    "metadata": {},
    "outputs": [
@@ -926,7 +949,7 @@
        "max    19374.000000  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "26de11ae-66d9-41ef-ac4a-fd972b5a0e7a",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "id": "a8ffd596-f38d-41c0-9dcf-5d55c06903e2",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1187,7 @@
        "416                       19374.0         11340.0      19374.0  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,11 +1203,42 @@
     "                         (reddit_2018['Max Upvotes'].isin(top_2_upvotes_rows['Max Upvotes']))]\n",
     "result_rows.loc[:,list(result_rows.columns[1:12]) + list(result_rows.columns[-9:])]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "45db9538-842f-4e12-9eda-af8ef3357ede",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. \\n\\nSincerely, \\n\\n\\nSeahawks fans everywhere.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit_df['Game thread scraped'][0][1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb6b094f-912f-405c-a4a0-e93ef69f2d40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sklearn-env]",
+   "display_name": "Python [conda env:sklearn-env] *",
    "language": "python",
    "name": "conda-env-sklearn-env-py"
   },
