--- a/exploring/sentiment_analysis.ipynb
+++ b/exploring/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 225,
    "id": "d57b7666-214b-474a-adbc-542e72d94066",
    "metadata": {
     "tags": []
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 226,
    "id": "64c505db-aaed-4d3f-908d-537df4352fd0",
    "metadata": {
     "tags": []
@@ -259,7 +259,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 227,
    "id": "4b970f37-39db-42b7-ab62-85c0737ee01c",
    "metadata": {
     "tags": []
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 228,
    "id": "9772ce21-6e95-445e-a475-5a8d4667ddb5",
    "metadata": {
     "tags": []
@@ -302,7 +302,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. \\n\\nSincerely, \\n\\n\\nSeahawks fans everywhere.'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 229,
    "id": "810ee356-ef80-412e-ab39-6e744c46b7ea",
    "metadata": {
     "tags": []
@@ -326,7 +326,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. Sincerely, Seahawks fans everywhere.'"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 230,
    "id": "270f197d-eaf5-4f9f-a449-e163043dd3c2",
    "metadata": {
     "tags": []
@@ -375,7 +375,7 @@
        "'Dear Falcons fans are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl I feel your pain Sincerely Seahawks fans everywhere'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 231,
    "id": "d348f4ad-c29f-41b4-86e6-f2d50858d561",
    "metadata": {
     "tags": []
@@ -400,15 +400,14 @@
      "text": [
       "Collecting vaderSentiment\n",
       "  Downloading vaderSentiment-3.3.2-py2.py3-none-any.whl (125 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m126.0/126.0 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: requests in /opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages (from vaderSentiment) (2.29.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages (from requests->vaderSentiment) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages (from requests->vaderSentiment) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages (from requests->vaderSentiment) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages (from requests->vaderSentiment) (2023.11.17)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m126.0/126.0 kB\u001b[0m \u001b[31m202.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /Users/rohanjha/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from vaderSentiment) (2.28.1)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/rohanjha/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->vaderSentiment) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/rohanjha/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->vaderSentiment) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/rohanjha/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->vaderSentiment) (1.26.13)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/rohanjha/.pyenv/versions/3.11.1/lib/python3.11/site-packages (from requests->vaderSentiment) (2022.12.7)\n",
       "Installing collected packages: vaderSentiment\n",
-      "Successfully installed vaderSentiment-3.3.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Successfully installed vaderSentiment-3.3.2\n"
      ]
     }
    ],
@@ -418,19 +417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 232,
    "id": "bc94fff5-0b4f-40e5-912e-ec836ec09015",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "nltk.download('vader_lexicon')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 233,
    "id": "5212fb01-3e98-4894-80b3-21b5ddb68ae2",
    "metadata": {
     "tags": []
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 234,
    "id": "7cf38b27-677a-44b0-96bc-d44d7bf60b2b",
    "metadata": {
     "tags": []
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 235,
    "id": "6880eb6b-21df-45f6-8ee1-cb8798c600f8",
    "metadata": {
     "tags": []
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 236,
    "id": "9daea5bb-5f7f-49ca-943d-f4313ca6df89",
    "metadata": {
     "tags": []
@@ -543,87 +543,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 289,
    "id": "c81fda98-6cc0-4330-82ad-98e5701741d2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Brady drafted in the 6th round...\n",
-      "\n",
-      "Minshew II drafted in the 6th round....\n",
-      "\n",
-      "\n",
-      "I’m starting to see a trend here.\n",
-      "____________________________________________________________________________________________________\n",
-      "Positive: []\n",
-      "Neutral: ['Brady', 'drafted', 'in', 'the', '6th', 'round', 'Minshew', 'II', 'drafted', 'in', 'the', '6th', 'round', 'I', '’', 'm', 'starting', 'to', 'see', 'a', 'trend', 'here']\n",
-      "Negative: []\n",
-      "\n",
-      "Scores: {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0} \n",
-      "\n",
-      "Sentence Overall Rated As Neutral\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /Users/rohanjha/nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
-    "num_1 = random.randrange(len(reddit_df))\n",
-    "num_2 = random.randrange(len(reddit_df.iloc[num_1,:].loc['Game thread scraped']))\n",
-    "text = reddit_df['Game thread scraped'][num_1][num_2][0]\n",
-    "print(text)\n",
-    "print(\"____________________________________________________________________________________________________\")\n",
-    "text = unmark(text).replace(\" \\n\",\" \")\n",
-    "text = convert_super_bowl(text)\n",
-    "text = text.translate(str.maketrans('', '', string.punctuation))\n",
-    "nltk.download('vader_lexicon')\n",
-    "from nltk.tokenize import word_tokenize, RegexpTokenizer\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "tokenized_sentence = nltk.word_tokenize(text)\n",
     "\n",
-    "sid = SentimentIntensityAnalyzer()\n",
-    "pos_word_list=[]\n",
-    "neu_word_list=[]\n",
-    "neg_word_list=[]\n",
+    "thread_num = []\n",
+    "comment_num = []\n",
+    "comments = []\n",
+    "pos_words = []\n",
+    "neu_words = []\n",
+    "neg_words = []\n",
+    "scores = []\n",
+    "overall_rating = []\n",
     "\n",
-    "for word in tokenized_sentence:\n",
-    "    if (sid.polarity_scores(word)['compound']) >= 0.1:\n",
-    "        pos_word_list.append(word)\n",
-    "    elif (sid.polarity_scores(word)['compound']) <= -0.1:\n",
-    "        neg_word_list.append(word)\n",
-    "    else:\n",
-    "        neu_word_list.append(word)                \n",
+    "for i in range(10):\n",
+    "    num_1 = random.randrange(len(reddit_df))\n",
+    "    for i in range(50):\n",
+    "        thread_num.append(num_1)\n",
+    "        num_2 = random.randrange(len(reddit_df.iloc[num_1,:].loc['Game thread scraped']))\n",
+    "        comment_num.append(num_2)\n",
+    "        text = reddit_df['Game thread scraped'][num_1][num_2][0]\n",
+    "        # print(text)\n",
+    "        # print(\"____________________________________________________________________________________________________\")\n",
+    "        comments.append(text)\n",
+    "        text = unmark(text).replace(\" \\n\",\" \")\n",
+    "        text = convert_super_bowl(text)\n",
+    "        text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "        from nltk.tokenize import word_tokenize, RegexpTokenizer\n",
+    "        from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "        tokenized_sentence = nltk.word_tokenize(text)\n",
     "\n",
-    "print('Positive:',pos_word_list)        \n",
-    "print('Neutral:',neu_word_list)    \n",
-    "print('Negative:',neg_word_list) \n",
-    "score = sid.polarity_scores(text)\n",
-    "print('\\nScores:', score,\"\\n\")\n",
-    "print(\"Sentence Overall Rated As\", end = \" \")\n",
-    "if score['compound'] >= 0.05 :\n",
-    "    print(\"Positive\")\n",
-    "elif score['compound'] <= - 0.05 :\n",
-    "    print(\"Negative\")\n",
-    "else :\n",
-    "    print(\"Neutral\")"
+    "        sid = SentimentIntensityAnalyzer()\n",
+    "        pos_word_list=[]\n",
+    "        neu_word_list=[]\n",
+    "        neg_word_list=[]\n",
+    "\n",
+    "        for word in tokenized_sentence:\n",
+    "            if (sid.polarity_scores(word)['compound']) >= 0.05:\n",
+    "                pos_word_list.append(word)\n",
+    "            elif (sid.polarity_scores(word)['compound']) <= -0.05:\n",
+    "                neg_word_list.append(word)\n",
+    "            else:\n",
+    "                neu_word_list.append(word)                \n",
+    "\n",
+    "        # print('Positive:', pos_word_list) \n",
+    "        pos_words.append(pos_word_list)\n",
+    "        # print('Neutral:', neu_word_list) \n",
+    "        neu_words.append(neu_word_list)\n",
+    "        # print('Negative:', neg_word_list) \n",
+    "        neg_words.append(neg_word_list)\n",
+    "        score = sid.polarity_scores(text)\n",
+    "        # print('\\nScores:', score,\"\\n\")\n",
+    "        scores.append(score)\n",
+    "        # print(\"Sentence Overall Rated As\", end = \" \")\n",
+    "        if score['compound'] >= 0.05 :\n",
+    "            # print(\"Positive\")\n",
+    "            overall_rating.append(1)\n",
+    "        elif score['compound'] <= - 0.05 :\n",
+    "            # print(\"Negative\")\n",
+    "            overall_rating.append(-1)\n",
+    "        else :\n",
+    "            # print(\"Neutral\")\n",
+    "            overall_rating.append(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 291,
+   "id": "f001525f-d093-4116-bb5f-6d798fc0196b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"Thread\": thread_num,\n",
+    "    \"Comment Number\": comment_num,\n",
+    "    'Comment Text': comments,\n",
+    "    'Positive Words': pos_words,\n",
+    "    'Neutral Words': neu_words,\n",
+    "    'Negative Words': neg_words,\n",
+    "    'Scores': scores,\n",
+    "    'Overall Rating': overall_rating\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv('verifying_scores.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
    "id": "3cf057b8-deb1-4cf0-bec9-3d066fda5e30",
    "metadata": {
     "tags": []
@@ -643,7 +658,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 263,
    "id": "1d938155-ad86-45e4-9e04-182cd8e5387d",
    "metadata": {
     "tags": []
@@ -666,23 +681,19 @@
     {
      "data": {
       "text/plain": [
-       "['Fuckin',\n",
-       " 'Mark',\n",
-       " 'Wahlberg',\n",
-       " 'LEFT',\n",
-       " 'THE',\n",
-       " 'SUPER',\n",
-       " 'BOWL',\n",
-       " 'EARLY',\n",
-       " 'BECAUSE',\n",
-       " 'THE',\n",
-       " 'PATS',\n",
-       " 'WERE',\n",
-       " 'DOWN',\n",
-       " '283']"
+       "['Bosa',\n",
+       " 'literally',\n",
+       " 'gets',\n",
+       " 'held',\n",
+       " 'next',\n",
+       " 'to',\n",
+       " 'that',\n",
+       " 'like',\n",
+       " 'come',\n",
+       " 'on']"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 264,
    "id": "92542450-e288-43be-8965-4e23c27732e9",
    "metadata": {
     "tags": []
@@ -703,23 +714,10 @@
     {
      "data": {
       "text/plain": [
-       "['fuckin',\n",
-       " 'mark',\n",
-       " 'wahlberg',\n",
-       " 'left',\n",
-       " 'the',\n",
-       " 'super',\n",
-       " 'bowl',\n",
-       " 'earli',\n",
-       " 'becaus',\n",
-       " 'the',\n",
-       " 'pat',\n",
-       " 'were',\n",
-       " 'down',\n",
-       " '283']"
+       "['bosa', 'liter', 'get', 'held', 'next', 'to', 'that', 'like', 'come', 'on']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 265,
    "id": "fd65d85e-f2e9-482d-9970-56c80081e962",
    "metadata": {
     "tags": []
@@ -751,23 +749,10 @@
     {
      "data": {
       "text/plain": [
-       "['fuckin',\n",
-       " 'mark',\n",
-       " 'wahlberg',\n",
-       " 'left',\n",
-       " 'the',\n",
-       " 'super',\n",
-       " 'bowl',\n",
-       " 'earli',\n",
-       " 'becaus',\n",
-       " 'the',\n",
-       " 'pat',\n",
-       " 'were',\n",
-       " 'down',\n",
-       " '283']"
+       "['bosa', 'liter', 'get', 'held', 'next', 'to', 'that', 'like', 'come', 'on']"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 266,
    "id": "a3ff56ad-c3ff-4964-8925-9113564b6631",
    "metadata": {
     "tags": []
@@ -791,19 +776,10 @@
     {
      "data": {
       "text/plain": [
-       "['fuckin',\n",
-       " 'mark',\n",
-       " 'wahlberg',\n",
-       " 'left',\n",
-       " 'super',\n",
-       " 'bowl',\n",
-       " 'earli',\n",
-       " 'becaus',\n",
-       " 'pat',\n",
-       " '283']"
+       "['bosa', 'liter', 'get', 'held', 'next', 'like', 'come']"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,12 +793,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 267,
    "id": "a0d43a2e-f49b-4f5b-8081-616b8ebad1df",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Bosa', 'NNP')]\n",
+      "[('literally', 'RB')]\n",
+      "[('gets', 'VBZ')]\n",
+      "[('held', 'NN')]\n",
+      "[('next', 'JJ')]\n",
+      "[('to', 'TO')]\n",
+      "[('that', 'IN')]\n",
+      "[('like', 'IN')]\n",
+      "[('come', 'VB')]\n",
+      "[('on', 'IN')]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -831,26 +823,6 @@
       "[nltk_data]     /Users/rohanjha/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
       "[nltk_data]       date!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Fuckin', 'NNP')]\n",
-      "[('Mark', 'NN')]\n",
-      "[('Wahlberg', 'NNP')]\n",
-      "[('LEFT', 'NNP')]\n",
-      "[('THE', 'DT')]\n",
-      "[('SUPER', 'NN')]\n",
-      "[('BOWL', 'NN')]\n",
-      "[('EARLY', 'JJ')]\n",
-      "[('BECAUSE', 'IN')]\n",
-      "[('THE', 'DT')]\n",
-      "[('PATS', 'NN')]\n",
-      "[('WERE', 'NN')]\n",
-      "[('DOWN', 'RB')]\n",
-      "[('283', 'CD')]\n"
      ]
     }
    ],
@@ -862,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 268,
    "id": "02237dfa-bdef-4e42-a88b-958384816862",
    "metadata": {
     "tags": []
@@ -871,10 +843,10 @@
     {
      "data": {
       "text/plain": [
-       "FreqDist({'fan': 2, 'dear': 1, 'falcon': 1, 'guy': 1, 'readi': 1, '17': 1, 'straight': 1, 'week': 1, 'hear': 1, 'fuck': 1, ...})"
+       "FreqDist({'bosa': 1, 'liter': 1, 'get': 1, 'held': 1, 'next': 1, 'like': 1, 'come': 1})"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
