added flair data

--- a/exploring/exploring_scrape.ipynb
+++ b/exploring/exploring_scrape.ipynb
@@ -1238,7 +1238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sklearn-env] *",
+   "display_name": "Python [conda env:sklearn-env]",
    "language": "python",
    "name": "conda-env-sklearn-env-py"
   },
