--- a/AI/exploringchatgpt.ipynb
+++ b/AI/exploringchatgpt.ipynb
@@ -113,7 +113,7 @@
     "messages = [\n",
     "    {\n",
     "        \"role\": \"system\",\n",
-    "        \"content\": \"As an AI with expertise in language and emotion analysis, your task is to analyze the sentiment of the following comment. This comment was posted on the r/nfl subreddit after a regular season NFL match. Please consider the overall tone of the discussion, the emotion conveyed by the language used, and the context in which words and phrases are used. Use one word to indicate whether the sentiment is generally positive, negative, or neutral.\"\n",
+    "        \"content\": \"As an AI with expertise in language and emotion analysis, your task is to analyze the sentiment of the following comment. This comment was posted on the r/nfl subreddit after a regular season NFL match. Please consider the overall tone of the discussion, the emotion conveyed by the language used, and the context in which words and phrases are used. Use one word to indicate whether the sentiment is generally positive, negative, or neutral. Be careful about sarcastic comments, indicating neutral if you are unsure about the sentiment in a comment.\"\n",
     "    },\n",
     "    {\n",
     "        \"role\": \"user\",\n",
@@ -611,6 +611,14 @@
    ],
    "source": [
     "sentiment_analysis(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25c7ecc4-9767-47d7-822c-759273deb5e9",
+   "metadata": {},
+   "source": [
+    "# Testing"
    ]
   },
   {
