cleaned up some stuff

--- a/AI/exploringchatgpt.ipynb
+++ b/AI/exploringchatgpt.ipynb
@@ -732,8 +732,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "e8e4fa6d-3a7a-423f-be5a-8e9ac2676efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/sklearn-env/lib/python3.11/site-packages/numpy/core/fromnumeric.py:3156: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  return asarray(a).ndim\n"
+     ]
+    }
+   ],
+   "source": [
+    "with zipfile.ZipFile(\"../data/reddit_scrape.csv.zip\") as z:\n",
+    "    with z.open(\"reddit_scrape.csv\") as f:\n",
+    "        reddit_df = pd.read_csv(f)\n",
+    "\n",
+    "reddit_df['Date'] = pd.to_datetime(reddit_df['Date'])    \n",
+    "reddit_df.head()\n",
+    "\n",
+    "scrape_cols = [x for x in reddit_df.columns if 'craped' in x]\n",
+    "for col in scrape_cols: # converts strings to lists\n",
+    "    reddit_df[col] = reddit_df[col].apply(lambda x: eval(x) if type(x)==str else x)\n",
+    "\n",
+    "    \n",
+    "reddit_df['game_thread_comments'] = [lst[1:] for lst in reddit_df.loc[:,'Game thread scraped']]\n",
+    "reddit_df['post_game_thread_comments'] = [lst[1:] if type(lst)==list else lst for lst in reddit_df.loc[:,'Post game thread Scraped']]\n",
+    "reddit_df['all comments'] =  reddit_df['game_thread_comments'] + reddit_df['post_game_thread_comments']\n",
+    "reddit_df.loc[reddit_df['all comments'].isna(),'all comments'] = \\\n",
+    "        [lst[1:] for lst in reddit_df.loc[reddit_df['all comments'].isna(),'Game thread scraped']]\n",
+    "reddit_df.drop(columns=['game_thread_comments','post_game_thread_comments'],inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cec1316-7094-4f1f-8e66-df0876d4d934",
    "metadata": {},
    "outputs": [],
    "source": []
