--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "8a968334-f64d-41ad-bcc8-471af9963408",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b7eee34d-81b0-4d23-937a-18435002447e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5afcaea3-022d-43da-a0e2-2f59aac4cd21",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4d0006ca-7663-4be7-945f-e92e620f4ee0",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. Sincerely, Seahawks fans everywhere.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4e38f69c-8b6f-4ad2-9ad2-f8aeaefb3e19",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "'Dear Falcons fans are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl I feel your pain Sincerely Seahawks fans everywhere'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4c070f9a-f7ac-464d-a47e-39dda36574fe",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f9cdcc3f-a51a-45f4-bc8d-74c0e93bd778",
    "metadata": {},
    "outputs": [],
@@ -209,18 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "b341a2a9-1003-4175-81a9-8acaacd3155f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from openai import OpenAI\n",
+    "client = OpenAI(api_key=\"...\")\n",
+    "\n",
     "from tenacity import (\n",
     "    retry,\n",
     "    stop_after_attempt,\n",
     "    wait_random_exponential,\n",
-    ") \n",
-    "\n",
-    "@retry(wait=wait_random_exponential(min=1, max=60), stop=stop_after_attempt(3))\n",
+    ")  # for exponential backoff\n",
+    " \n",
+    "@retry(wait=wait_random_exponential(min=1, max=61), stop=stop_after_attempt(6))\n",
     "def sentiment_analysis(transcription):\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo-0125\",\n",
@@ -266,70 +269,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "538f5690-2f5e-4148-a9c3-4504a1ce885c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Season', 'Week', 'Day', 'Date', 'Time (ET)', 'Unnamed: 5', 'Favorite',\n",
-       "       'Score', 'Spread', 'Unnamed: 9', 'Underdog', 'Over/Under', 'Notes',\n",
-       "       'GameHub/RedZone', 'Game thread link?', 'Post-game thread link?',\n",
-       "       'Game thread', 'Post game thread', 'GameHub Scraped',\n",
-       "       'Game thread scraped', 'Post game thread Scraped',\n",
-       "       'Subscribers (in thousands)', 'all comments'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reddit_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "70c3e53a-c49d-4473-9615-d5c122937158",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ChatCompletion(id='chatcmpl-97Vl5AgFwKuE3U6iygSqyclYhzJEm', choices=[Choice(finish_reason='length', index=0, logprobs=None, message=ChatCompletionMessage(content='Negative', role='assistant', function_call=None, tool_calls=None))], created=1711577403, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_3bc1b5746c', usage=CompletionUsage(completion_tokens=1, prompt_tokens=147, total_tokens=148))"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transcription = clean_text(reddit_df['all comments'][0][0][0])\n",
-    "response = client.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo-0125\",\n",
-    "        temperature=0,\n",
-    "        messages=[\n",
-    "            {\n",
-    "                \"role\": \"system\",\n",
-    "                \"content\": \"As an AI with expertise in language and emotion analysis, your task is to analyze the sentiment of the following comment. This comment was posted on the r/nfl subreddit after a regular season NFL match. Please consider the overall tone of the discussion, the emotion conveyed by the language used, and the context in which words and phrases are used. Use one word to indicate whether the sentiment is generally positive, negative, or neutral. Be careful about sarcastic comments, indicating neutral if you are unsure about the sentiment in a comment.\"\n",
-    "            },\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": transcription\n",
-    "            }\n",
-    "        ],\n",
-    "        max_tokens=1\n",
-    "    )\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "8ef9fdf7-a011-47b1-80a3-406dd39cff97",
    "metadata": {},
@@ -348,8 +287,7 @@
     "props = []\n",
     "for index, row in reddit_df.iterrows():\n",
     "    if index % 50 == 0:\n",
-    "        print(f\"Scraped {index}\")\n",
-    "        print(f\"Last 5 problematic rows: {problematic_rows[-5:]}\")\n",
+    "        print(f\"Scraped {index}; Last 5 problematic rows: {problematic_rows[-5:]}\")\n",
     "    try:\n",
     "        props.append(prop_calculator(list_analyser(row['all comments'])))\n",
     "    except:\n",
@@ -362,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "c9726b7a-ef2f-4e30-bf27-b026995cebbf",
    "metadata": {},
    "outputs": [
@@ -373,7 +311,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
       "\u001b[0;31mNameError\u001b[0m: name 'props' is not defined"
      ]
     }
