--- a/AI/running_chatgpt.ipynb
+++ b/AI/running_chatgpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "8a968334-f64d-41ad-bcc8-471af9963408",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b7eee34d-81b0-4d23-937a-18435002447e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "5afcaea3-022d-43da-a0e2-2f59aac4cd21",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4d0006ca-7663-4be7-945f-e92e620f4ee0",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "'Dear Falcons fans: are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl? I feel your pain. Sincerely, Seahawks fans everywhere.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4e38f69c-8b6f-4ad2-9ad2-f8aeaefb3e19",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "'Dear Falcons fans are you guys ready for 17 straight weeks of hearing how you fucked up the Super Bowl I feel your pain Sincerely Seahawks fans everywhere'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "4c070f9a-f7ac-464d-a47e-39dda36574fe",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "f9cdcc3f-a51a-45f4-bc8d-74c0e93bd778",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "b341a2a9-1003-4175-81a9-8acaacd3155f",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
     "    wait_random_exponential,\n",
     ")  # for exponential backoff\n",
     " \n",
-    "@retry(wait=wait_random_exponential(min=1, max=61), stop=stop_after_attempt(6))\n",
+    "@retry(wait=wait_random_exponential(min=1, max=61), stop=stop_after_attempt(7))\n",
     "def sentiment_analysis(transcription):\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo-0125\",\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b4b9264d-3885-4aa7-a770-35a634423139",
    "metadata": {},
    "outputs": [],
@@ -272,20 +272,11 @@
    "execution_count": null,
    "id": "8ef9fdf7-a011-47b1-80a3-406dd39cff97",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scraped 0\n",
-      "Last 5 problematic rows: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "problematic_rows = []\n",
-    "props = []\n",
-    "for index, row in reddit_df.iterrows():\n",
+    "props = [eval(x) if type(x) == str else x for x in list(pd.read_csv('progress.csv')['props'])]\n",
+    "problematic_rows = [i for i in range(len(props)) if type(props[i]) != tuple and np.isnan(props[i])]\n",
+    "for index, row in reddit_df[len(props):].iterrows():\n",
     "    if index % 50 == 0:\n",
     "        print(f\"Scraped {index}; Last 5 problematic rows: {problematic_rows[-5:]}\")\n",
     "    try:\n",
@@ -294,13 +285,44 @@
     "        problematic_rows.append(index)\n",
     "        props.append(np.NaN)\n",
     "    pd.DataFrame({'props': props}).to_csv('progress.csv')\n",
+    "    # if index > 5 and all(problematic_rows[-5:] == np.arange(index-4,index+1)):\n",
+    "    #        break\n",
     "print(f\"Scraped {len(reddit_df)}; Finished\")\n",
     "print(f\"Last 5 problematic rows: {problematic_rows[-5:]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
+   "id": "1fcd55c9-4dd5-4905-8de3-831c10d31320",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/td/dtym05z13119cjklqb5tyd040000gn/T/ipykernel_72771/1865449072.py:1: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  problematic_rows[-5:] == np.arange(index-4,index+1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "problematic_rows[-5:] == np.arange(index-4,index+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "c9726b7a-ef2f-4e30-bf27-b026995cebbf",
    "metadata": {},
    "outputs": [
@@ -311,7 +333,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m props\n",
       "\u001b[0;31mNameError\u001b[0m: name 'props' is not defined"
      ]
     }
